# CudaCalc

./: .gitignore  CLAUDE.md  CMakeLists.txt  ERROR_ANALYSIS.md  FFT_IMPLEMENTATION_GUIDE.md  FINAL_DECISION.md  FINAL_STATUS.md  NEXT_STEPS.md  PERFORMANCE_GAP_ANALYSIS.md  README.md  README_NEW_TASK.md  ROADMAP.md  SAVE_MANIFEST.md  SESSION_SUMMARY_2025_10_10.md  SESSION_SUMMARY_2025_10_10_FINAL.md  SPEC_KIT_CHEATSHEET.md  SPEC_KIT_SETUP_COMPLETE.md  SPEED_INVESTIGATION.md  VICTORY_REPORT.md  WHATS_NEXT.md  benchmark_all_fft.cpp  build_error_test.sh  info_specify.txt  test_error_details.cpp  test_fft32_quick.sh  test_speed_final.cpp
Archive/: BENCHMARK_RESULTS.md  FFT_OPTIMIZATION_ARCHIVE.md  README.md
Archive/FFT1024/v1_baseline/: RESULTS.txt  fft1024_simple_correct.cu
Archive/FFT128/v1_baseline/: RESULTS.txt  fft128_simple_correct.cu
Archive/FFT16/v1_baseline/: RESULTS.txt  fft16_batch64.cu  test_fft16_batch_VALIDATED.cpp
Archive/FFT256/v1_baseline/: RESULTS.txt  fft256_simple_correct.cu
Archive/FFT32/v1_baseline/: RESULTS.txt  fft32_batch32_v2.cu  test_fft32_batch_VALIDATED.cpp
Archive/FFT512/v1_baseline/: RESULTS.txt  fft512_simple_correct.cu
Archive/FFT_Implementations/: README.md
Archive/SharedMemory_Results/: README.md  fft128_shared_memory.cu  fft128_simple_single.cu  fft16_shared_memory.cu  fft16_shared_memory_v2.cu  fft16_shared_memory_v3.cu  fft256_shared_memory.cu  fft256_simple_single.cu  fft32_shared_memory.cu  fft64_shared_memory.cu  fft64_shared_memory_v2.cu  fft64_simple_single.cu  test_fft128_fair_comparison.cpp  test_fft256_fair_comparison.cpp  test_fft64_fair_comparison.cpp
DataContext/: CMakeLists.txt
DataContext/Models/NVIDIA/FFT/16/: BREAKTHROUGH_REPORT.md  FFT16_SOLUTION_REPORT.md
DataContext/Models/NVIDIA/FFT/16/BEST_PRODUCTION_v1.0_2025_10_10/: PRODUCTION_SPEC.md  fft16_wmma_optimized.cpp
DataContext/Models/NVIDIA/FFT/16/archive_before_fix_2025_10_10/: RESULTS.md  fft16_shared2d_kernel.cu  fft16_wmma_kernel.cu
DataContext/Models/NVIDIA/FFT/32/FFT32_V1_BEST_2025_10_10/: SOLUTION_SUMMARY.md  fft32_wmma_optimized.cpp  fft32_wmma_optimized.h  fft32_wmma_optimized_kernel.cu
DataContext/Registry/: BEST_RECORDS.json  experiments_registry.json
DataContext/Reports/2025-10-10/: FFT32_FINAL_REPORT.md  FFT32_FULL_COMPARISON.txt  FFT32_OPTIMIZATION_LOG.md  FFT32_SESSION_SUMMARY.md  FFT64_FINAL_DECISION.md  FFT64_INITIAL_REPORT.md  FFT64_OPTIMIZATION_ANALYSIS.md  FFT64_VARIANTS_COMPARISON.md  PRODUCTION_CERTIFICATION.md
DataContext/Reports/2025-10-10/session_fft16_debug/: SESSION_REPORT.md
DataContext/Reports/2025-10-10/session_fft16_debug/results/: fft16_comparison.json  fft16_shared2d_result.json  fft16_wmma_result.json
DataContext/include/: json_logger.h
DataContext/src/: json_logger.cpp  placeholder.cpp
Interface/: CMakeLists.txt  README.md
Interface/include/: common_types.h  igpu_processor.h  signal_data.h
MainProgram/: CMakeLists.txt
MainProgram/src/: main.cpp  main_fft32.cpp  main_fft32_comparison_table.cpp  main_fft32_multisize.cpp  test_fft32_v4.cpp  test_fft32_v5.cpp  test_fft64.cpp
ModelsFunction/: CMakeLists.txt
ModelsFunction/include/nvidia/fft/: fft16_shared2d.h  fft16_shared2d_profiled.h  fft16_wmma.h  fft16_wmma_optimized.h  fft16_wmma_optimized_profiled.h  fft16_wmma_profiled.h  fft16_wmma_ultra.h  fft16_wmma_ultra_profiled.h  fft32_wmma_optimized_profiled.h  fft32_wmma_v2_ultra.h  fft32_wmma_v3_final.h  fft32_wmma_v4_correct.h  fft32_wmma_v5_fixed.h  fft64_wmma_optimized.h
ModelsFunction/src/: placeholder.cpp
ModelsFunction/src/nvidia/fft/FFT16_Shared2D/: fft16_shared2d.cpp  fft16_shared2d_kernel.cu  fft16_shared2d_profiled.cpp  twiddle_factors.cuh
ModelsFunction/src/nvidia/fft/FFT16_WMMA/: fft16_wmma.cpp  fft16_wmma_kernel.cu  fft16_wmma_optimized_kernel.cu  fft16_wmma_optimized_profiled.cpp  fft16_wmma_profiled.cpp
ModelsFunction/src/nvidia/fft/FFT16_WMMA_Ultra/: REFERENCE_ultra_optimized_tensor_kernels.cu  fft16_wmma_ultra.cpp  fft16_wmma_ultra_kernel.cu  fft16_wmma_ultra_profiled.cpp
ModelsFunction/src/nvidia/fft/FFT32_WMMA/: fft32_wmma_CORRECT_kernel.cu  fft32_wmma_optimized_kernel.cu  fft32_wmma_optimized_kernel_NEW.cu  fft32_wmma_optimized_kernel_OLD_BROKEN.cu  fft32_wmma_optimized_profiled.cpp  fft32_wmma_v2_ultra.cpp  fft32_wmma_v2_ultra_kernel.cu  fft32_wmma_v3_final.cpp  fft32_wmma_v3_final_kernel.cu  fft32_wmma_v4_correct.cpp  fft32_wmma_v4_correct_kernel.cu  fft32_wmma_v5_fixed.cpp  fft32_wmma_v5_fixed_kernel.cu
ModelsFunction/src/nvidia/fft/FFT64_WMMA/: fft64_wmma_optimized.cpp  fft64_wmma_optimized_kernel.cu
SignalGenerators/: CMakeLists.txt
SignalGenerators/include/: base_generator.h  signal_types.h  sine_generator.h
SignalGenerators/src/: placeholder.cpp  sine_generator.cpp
Tester/: CMakeLists.txt
Tester/include/performance/: basic_profiler.h  memory_profiler.h  profiling_data.h
Tester/include/validation/: fft_validator.h  validation_result.h
Tester/src/: placeholder.cpp
Tester/src/performance/: basic_profiler.cpp  memory_profiler.cpp
Tester/src/validation/: fft_validator.cpp
Validator/: README.md  comparison.py  fft_reference.py  requirements.txt  validate_fft.py  visualization.py
docs/: CORRELATION_ARCHITECTURE_ANALYSIS.md  DESIGN_PATTERNS_ANALYSIS.md  OPTIMIZATION_GUIDE.md  OVERLAPPING_FFT_ANALYSIS.md  WORK_PLAN_COMPACT.md  WORK_PLAN_COMPACT0.md  WORK_PLAN_COMPACT_NO_DATES.md  WORK_PLAN_FULL.md  WORK_PLAN_FULL_NO_DATES.md  Архитектура проекта GPU-вычислений на C++.md
docs/cursor_settings/: INSTALLATION_UBUNTU_RU.md  INSTALLATION_WINDOWS_RU.md  QUICK_REFERENCE_RU.md  README.md  SPEC_KIT_MEMORY_BANK_GUIDE_RU.md  extensions.txt  global_rules.md  mcp.json  Памятка_не_забыть.txt
memory/: constitution.md
scripts/: README.md  create-feature.sh
specs/: COMPARISON_TABLE.md
specs/001-fft16-baseline-pipeline/: model_archiver_FINAL.md  model_archiver_protocol.md  model_archiver_protocol_v2.md  plan.md  spec.md  tasks.md
src/: OptimizedTensorFFTKernels.cu  Real2DTensorFFTKernels.cu  TensorFFTKernels.cu
templates/: spec_template.md
(+36 files in other folders)
